--- a/Clash/config/ACL4SSR.ini
+++ b/Clash/config/ACL4SSR.ini
@@ -25,6 +25,8 @@ ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
+clash_rule_base=https://raw.githubusercontent.com/pengchujin/ACL4SSR/master/Clash/GeneralClashConfig.yml
+
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
